<resources>
    <string name="app_name">My Weather</string>
    <string name="lang">ru</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Please sign-in with google </string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_forecast">Forecast</string>
    <string name="menu_city">Cities</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="Spb">Saint-Petersburg</string>
    <string name="Moscow">Moscow</string>
    <string name="night_mode">Night mode</string>
    <string name="temperature_c">Temperature C°</string>
    <string name="temperature_f">Temperature F°</string>
    <string name="pressure">Pressure</string>
    <string name="save">Save settings</string>
    <string name="wind">Wind</string>
    <string name="water">Water temperature</string>
    <string name="inputCity">Select city</string>
    <string name="saveCityName">Save</string>
    <string name="inputCityName">Введите название города</string>
    <string name="Humidity">Влажность:</string>
    <string name="Pressure">Давление:</string>
    <string name="Wind">Ветер:</string>
    <string name="settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="citySelection">Chose a city</string>
    <string name="internet_connection">Ожидаем подключения к интернету…</string>
    <string name="city_not_found">City not found…</string>
    <string name="title_dialog">Warning</string>
    <string name="yes">Ok</string>
    <string name="message_dialog">City not found</string>
    <string name="connection_error_title">Connection error</string>
    <string name="connection_error_msg">We have some problems with internet connection</string>
    <string name="connection_error_btn">Try another city…</string>
    <string name="connection_auth_msg">Problems with service authorization \nApplication will be closed</string>
    <string name="connection_auth_title">Authorization problems</string>
    <string name="okay">Got it</string>
    <string name="connection_city_wrong_msg">Please enter correct city</string>
    <string name="connection_city_wrong_title">" not found"</string>
    <string name="temperature_sort">Temperature</string>
    <string name="name_sort">Name</string>
    <string name="date_sort">Date</string>
    <string name="menu_map">Map</string>
    <string name="loading_data">Loading…</string>
    <string name="strong_wind_warning">%s: ожидается сильный ветер до %.1f м/с</string>
    <string name="log_off">Log off</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyATmGydZbz_aTf7o3AG3SUeQBlZ_JNIhKo</string>
    <string name="google_firebase_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAnZDvRbs6bwClObhfhjqsb9_ode7yK7dg</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="days_3">3 дня</string>
    <string name="days_5">5 дней</string>
    <string name="now">Сейчас</string>
</resources>
