<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchNightMode"
        style="@style/MyTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/night_mode"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioBtnCels"
            style="@style/MyTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/temperature_c"
            android:textSize="18sp" />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioBtnFahr"
            style="@style/MyTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temperature_f"
            android:textSize="18sp" />
    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchPressure"
        style="@style/MyTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textSize="18sp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchWind"
        style="@style/MyTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        android:textSize="18sp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchHumidity"
        style="@style/MyTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Humidity"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveSettings"
        style="@style/MyTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="18sp" />

</LinearLayout>