<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.selection.CitySelectionFragment">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputText"
        style="@style/CityInfoStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:ems="10"
        android:hint="@string/inputCityName"
        android:inputType="textPersonName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveCityName"/>

  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSortTemperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/temperature_sort"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSortName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/name_sort"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSortDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/date_sort"/>

  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerCityInfo"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"/>

</LinearLayout>