<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.geekbrains.myweather.ui.main.MainFragment"
        android:label="@string/menu_forecast"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_nav_home_to_nav_city_selection"
            app:destination="@id/nav_cities" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.geekbrains.myweather.ui.main.MainFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.geekbrains.myweather.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_nav_settings_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_settings_to_nav_cities"
            app:destination="@id/nav_cities" />
    </fragment>

    <fragment android:id="@+id/nav_map"
        android:name="com.geekbrains.myweather.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_nav_map_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_map_to_nav_cities"
            app:destination="@id/nav_cities" />
    </fragment>
    <fragment android:id="@+id/nav_cities"
        android:name="com.geekbrains.myweather.ui.selection.CitySelectionFragment"
        android:label="@string/menu_city"
        tools:layout="@layout/fragment_city_selection">
    </fragment>

</navigation>